* #2370 Update spanish translation. (marco)
* #2014 Add icons in the share dropdown in activities. (marco)

Snapshot 9ac5d38e90

* #2361 Ensure secondary palette state doesn't go out of screen. (marco)
* #2014 Use a combobox to represent activity network state. (marco)

Snapshot 4a924a8e5d

* #2399 Fix a bug which was preventing Write to start. (tomeu)
* #2052 Fix error in the developer console. (edsiper)

Snapshot 943c78ffa7

* #2323 Make combobox icons bigger when there is no text. (marco)
* Add option to GlibURLDownloader to download to specified file instead
  of tempfile (dcbw)

Snapshot 8ae99aaa87

* #2268 Allow removing downloads from the clipboard while in progress. (tomeu)
* #2240 Ensure activity uniquness in the shell. (marco)

Snapshot f6f3f2b520

* #2103 Use selection grey for progress in the browser entry. (marco)
* Fix opening downloads from the clipboard. (marco)

Snapshot 6b57baa075

* #2008 Place free views palettes at cursor. (marco)
* Actually handle multiple mime types (dcbw)
* Keep owner in the center in mesh view (dcbw)
* Suppress annoying warnings about unknown activities from the PS (dcbw)
* Don't close GlibTCPServer sockets prematurely (dcbw)

Snapshot 5212790236

* Fix initialization order of buddy class '_activities' member (dcbw)
* Update brazilian translation.
* Add polish translation.
* Add french translation.
* #958, #1433 Refactor brightness and volume key handling to follow
Eben specification and the new B3 keyboard (marco)

Snapshot fd7336c2f1

* Suppress traceback when creating a new buddy object on buddy-disappeared
  signal

Snapshot 9f4da4e6d1

* #775 Show the activity's creator colors in the donut. (danw)
* #2185 Do not shutdown on power button, ohm does it now. (marco)
* #1888 Choose the correct mime type when adding text from Write to the
  clipboard. (tomeu)
* #2149, #2150: fixes for the clipboard palette. (tomeu)
* #2163 Arrow icons in the intro screen buttons. (marco)

Snapshot 4c352d1f83
