@@ -1,3 +1,4 @@
+* Don't follow the cursor when expanding to secondary palette. (marco)
 * #2370 Update spanish translation. (marco)
 * #2014 Add icons in the share dropdown in activities. (marco)
 
